@@ -16,6 +16,7 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+
 // pthread.h has to be included first
 #include <pthread.h>
 #include <stdio.h>
@@ -29,8 +30,11 @@
 #include <time.h>
 #include <sys/time.h>
 
+/* generates a new key pair (two files) with the name alice and bob of 'size' bytes.
+unsigned int otp_generate_key_pair(const char* alice,const char* bob,const char* path,const char* source, unsigned int size);
+*/
 
-// Definition for the funcions. Has to be moved into the header file later
+// Definition for the funcions and global variables. => Has to be moved into the header file later
 unsigned char bit2char(short buf[7]);
 void *devrand();
 void *audio();
@@ -38,7 +42,10 @@ void *threads();
 static void *stub(void *arg);
 pthread_mutex_t mutex;
 
-// The main function starts the threads which collect entropie from different sources.
+
+/*
+*	The main function starts the threads which collect entropie from different sources.
+*/
 int main() {
 	pthread_t p1, p2, p3; 		// define threads
 
@@ -61,10 +68,13 @@ int main() {
 	pthread_mutex_destroy(&mutex);
 
 	return 0;
-}
+} // end main();
 
 
-// function which takes an array of 7 bits, and output an ascii char
+/*
+* function which takes an array of 7 bits, and output an ascii char. The buf array should only contain
+* 0 or 1, else the return value is not usefule
+*/
 unsigned char bit2char(short buf[7]) {
 	short i,l,in;
 	unsigned char out;
@@ -76,33 +86,59 @@ unsigned char bit2char(short buf[7]) {
 	}
 	out = (unsigned char)in;
 	return out;
-}
+} // end bit2char()
 
-// devrand() collects entropie from the /dev/random device and writes it into a keyfile
+
+/*
+* devrand() collects entropie from the /dev/random device and writes it into a keyfile
+*/
 void *devrand() {
 	int fd1, file;
 	unsigned char c1;
 
-	if((fd1 = open("/dev/random", O_RDONLY)) < 0) abort();
-	if((file = open("keyfile",O_RDWR|O_CREAT|O_APPEND,00644)) < 0) abort();
+	if((fd1 = open("/dev/random", O_RDONLY)) < 0) {
+		printf("could not open /dev/random \n");
+		return;
+	}
+	if((file = open("keyfile",O_RDWR|O_CREAT|O_APPEND,00644)) < 0) {
+		printf("could not open keyfile \n");
+		return;
+	}
 
 	while(1) {
-		if(read(fd1, &c1, 1) < 0) abort();
+		if(read(fd1, &c1, 1) < 0) {
+			printf("read error");
+		}
 		c1 = (unsigned char)((c1 % 96) + 32);
 
 		pthread_mutex_lock(&mutex);
-		if(write(file, &c1, 1) < 0) abort();
+		if(write(file, &c1, 1) < 0) {
+			printf("write error");
+			return;
+		{
 		pthread_mutex_unlock(&mutex);
 
 		usleep(5);
 	}
-}
+	
+	close(fd1);
+	close(file);
+} // end devrand()
 
+
+/*
+*	a helper function for the threads function
+*/
 static void *stub(void *arg) {
 	return 0;
-}
+} // end stub ()
 
-// threads() Collects entropie from thread timing
+
+/*
+*	threads() collects entropie from thread timing, by just mesuring the time it takes
+*	to open and close the stub() thread. This function takes one sample every second
+* 	and writes the entropie to the keyfile
+*/
 void *threads() {
 	short i;
 	unsigned char diff;
@@ -110,7 +146,10 @@ void *threads() {
 	int file;
 	pthread_t tid;
 
-	if((file = open("keyfile",O_RDWR|O_CREAT|O_APPEND,00644)) < 0) abort();
+	if((file = open("keyfile",O_RDWR|O_CREAT|O_APPEND,00644)) < 0) {
+		printf("could not open keyfile \n");
+		return;
+	}
 
 	while(1) {
 		gettimeofday(&start, NULL);
@@ -121,18 +160,24 @@ void *threads() {
 		diff = (unsigned char)(((finish.tv_usec - start.tv_usec) % 96) + 32);
 		
 		pthread_mutex_lock(&mutex);
-		if(write(file, &diff, 1) < 0) abort();
+		if(write(file, &diff, 1) < 0) {
+			printf("write error");
+			return;
+		}
 		pthread_mutex_unlock(&mutex);
 
 		sleep(1);
 	}
-}
+	
+	close(file);
+} // end threads()
+
 
 /*	
 	audio() collect entropie from /dev/audio and xor it with a value from /dev/urandom to
 	get a better distribution even if no sound is running. 
 	This function generates one bit of entropie out of 7 samples, generates an ascii char
-	and write this to the console.
+	and write this to the keyfile
 */
 void *audio() {
 	int fd,fd1,file;
@@ -141,11 +186,17 @@ void *audio() {
 	short buf[7];
 
 	if((fd = open("/dev/audio", O_RDONLY)) < 0) {
-		printf("error! couldn't open device\n");
-		abort();
+		printf("could not open /dev/audio \n");
+		return;
 	}
-	if((fd1 = open("/dev/urandom", O_RDONLY)) < 0) abort();
-	if((file = open("keyfile",O_RDWR|O_CREAT|O_APPEND,00644)) < 0) abort();
+	if((fd1 = open("/dev/urandom", O_RDONLY)) < 0) {
+		printf("could not opne /dev/urandom \n");
+		return;
+	}
+	if((file = open("keyfile",O_RDWR|O_CREAT|O_APPEND,00644)) < 0) {
+		printf("could not open keyfile \n");
+		return;
+	}
 
 	i = 0;
 	while(1) {
@@ -155,16 +206,24 @@ void *audio() {
 		if(c == oldc) usleep(500);
 		oldc = c;
 		if(i == 7) {
-			if(read(fd1, &d, 1) < 0) abort();
+			if(read(fd1, &d, 1) < 0) {
+				printf("read error");
+				return;
+			}
 			d = (unsigned char)(((d  ^ bit2char(buf)) % 96) + 32);
 			pthread_mutex_lock(&mutex);
-			if(write(file, &d, 1) < 0) abort();
+			if(write(file, &d, 1) < 0) {
+				printf("write error");
+				return;
+			}
 			pthread_mutex_unlock(&mutex);
 
 			i = 0;
 		usleep(5);
 		}
 	}
-}
-
-
+	
+	close(fd);
+	close(fd1);
+	close(file);
+} // end audio()
